--- a/app/views/partials/admin/_header.html.erb
+++ b/app/views/partials/admin/_header.html.erb
@@ -57,10 +57,7 @@
                         </br> par <%= User.find(notif.sender_id).username %>
                       </a>
                       <% elsif notif.message == "Nouvelle souscription à la Newsletter" %>
-                        <a href= "#">
-                          <i class="fa fa-users text-aqua"></i>
-                          <strong><%= notif.message %></strong>
-                        </a>
+                        <%= link_to "<i class='fa fa-users text-aqua'></i>#{notif.message}".html_safe, admin_newsletters_url %>
                       <% elsif notif.message == "Nouvel utilisateur" %>
                         <a href= "#">
                           <i class="fa fa-users text-aqua"></i>
