--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -74,10 +74,10 @@
                     <% elsif notif.message == "Nouvelle souscription à la Newsletter" %>
                       <%= link_to "<i class='fa fa-users text-aqua'></i>#{notif.message}".html_safe, admin_newsletters_url %>
                     <% elsif notif.message == "Nouvel utilisateur" %>
-                      <a href= "#">
-                        <i class="fa fa-users text-aqua"></i>
-                        <strong><%= notif.message %></strong>
-                      </a>
+                      <a href= <%= "/admin/#{notif.notifiable_type.downcase}s/#{notif.notifiable_id}" %> >
+                            <i class="fa fa-users text-aqua"></i>
+                              <%= notif.message %>
+                        </a>
                     <% else %>
                       <a href= <%= "/#{notif.notifiable_type.downcase}s/#{notif.notifiable_id}" %> >
                         <i class="fa fa-users text-aqua"></i>
