--- a/app/views/users/account/projects.html.erb
+++ b/app/views/users/account/projects.html.erb
@@ -37,6 +37,7 @@
                   <%= time_tag(project.created_at) %>
                 </td>
                 <td>
+                  <%= link_to '<i class="fa fa-users"></i>'.html_safe, project_participations_path(project.id), class: "btn btn-success" %>
                   <%= link_to '<i class="fa fa-pencil"></i>'.html_safe, edit_project_path(project.id), class: "btn btn-warning" %>
                   <%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, project_path(project.id), :method => 'delete', class: "btn btn-danger" %>
                 </td>
