--- a/app/views/admin/pages/documentation.html.erb
+++ b/app/views/admin/pages/documentation.html.erb
@@ -1,1 +1,3 @@
-<h1>Documentation</h1>
+<h2>Documentation</h2>
+
+<p>Lien pour se désinscrire de la Newsletter :  <strong>www.meusetech.com/unsuscribe</strong></p>
