--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,4 +10,4 @@
   </ul>
 <% end %>
 
-<%= link_to 'Créer un nouveau projet', new_project_path, class: "btn btn-info" %>
+<%= link_to 'Créer un nouveau projet', new_project_path, 'data-no-turbolink' => true, class: "btn btn-info" %>
