Fonctionnalités DataTables OK

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -73,7 +73,7 @@
   $(document).ready(function(){
     $('#usersTable').DataTable({
             "responsive": true,
-            "sScrollX": "100%", // retrait de la barre de scroll horizontale en responsive
+            "sScrollX": false, // retrait de la barre de scroll horizontale en responsive
             "language": { // mise en Français du pluggin.
                 "sProcessing": "Traitement en cours...",
                 "sSearch": "Rechercher&nbsp;:",
