--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -65,7 +65,7 @@
         $(document).ready(function(){
           $('#articlesListe').DataTable({
                   "responsive": true,
-                  "sScrollX": "100%", // retrait de la barre de scroll horizontale en responsive
+                  "sScrollX": false, // retrait de la barre de scroll horizontale en responsive
                   "language": { // mise en Français du pluggin.
                       "sProcessing": "Traitement en cours...",
                       "sSearch": "Rechercher&nbsp;:",
@@ -91,7 +91,7 @@
                   },
                   "pageLength": 25, // Affichage de 100 éléments de base au chargement de la page
                   "lengthMenu": [ [25, 50, 100, 1000, -1], [25, 50, 100, 1000, "tous les"] ], // Changement du menu de base pour la sélection de l'affichage du nombre d'éléments : [nombres d'éléments à afficher] [libellés]
-                  "order": [[1, 'asc']]
+                  "order": [[1, 'asc']],
               });
         });
       </script>
