--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -47,7 +47,7 @@
         $(document).ready(function(){
           $('#categoriesListe').DataTable({
                   "responsive": true,
-                  "sScrollX": "100%", // retrait de la barre de scroll horizontale en responsive
+                  "sScrollX": false, // retrait de la barre de scroll horizontale en responsive
                   "language": { // mise en Français du pluggin.
                       "sProcessing": "Traitement en cours...",
                       "sSearch": "Rechercher&nbsp;:",
