--- a/app/views/admin/newsletters/index.html.erb
+++ b/app/views/admin/newsletters/index.html.erb
@@ -34,7 +34,7 @@
   $(document).ready(function(){
     $('#emailsTable').DataTable({
             "responsive": true,
-            "sScrollX": "100%", // retrait de la barre de scroll horizontale en responsive
+            "sScrollX": false, // retrait de la barre de scroll horizontale en responsive
             "language": { // mise en Français du pluggin.
                 "sProcessing": "Traitement en cours...",
                 "sSearch": "Rechercher&nbsp;:",
