--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -101,7 +101,7 @@
   $(document).ready(function(){
     $('#projectsTable').DataTable({
             "responsive": true,
-            "sScrollX": "100%", // retrait de la barre de scroll horizontale en responsive
+            "sScrollX": false, // retrait de la barre de scroll horizontale en responsive
             "language": { // mise en Français du pluggin.
                 "sProcessing": "Traitement en cours...",
                 "sSearch": "Rechercher&nbsp;:",
