--- a/app/views/admin/surveys/index.html.erb
+++ b/app/views/admin/surveys/index.html.erb
@@ -54,7 +54,7 @@
   $(document).ready(function(){
     $('#surveysListe').DataTable({
             "responsive": true,
-            "sScrollX": "100%", // retrait de la barre de scroll horizontale en responsive
+            "sScrollX": false, // retrait de la barre de scroll horizontale en responsive
             "language": { // mise en Français du pluggin.
                 "sProcessing": "Traitement en cours...",
                 "sSearch": "Rechercher&nbsp;:",
