center text datatable

--- a/app/views/admin/newsletters/index.html.erb
+++ b/app/views/admin/newsletters/index.html.erb
@@ -30,6 +30,11 @@
     </div>
   </div>
 </section>
+<style type= "text/css">
+  th, td {
+    text-align: center;
+  }
+</style>
 <script>
   $(document).ready(function(){
     $('#emailsTable').DataTable({
