--- a/app/views/admin/surveys/index.html.erb
+++ b/app/views/admin/surveys/index.html.erb
@@ -50,6 +50,11 @@
     </div><!-- /.col -->
   </div><!-- /.row -->
 </section><!-- /.content -->
+<style type= "text/css">
+  th, td {
+    text-align: center;
+  }
+</style>
 <script>
   $(document).ready(function(){
     $('#surveysListe').DataTable({
