--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -69,6 +69,11 @@
     </div>
   </div>
 </section>
+<style type= "text/css">
+  th, td {
+    text-align: center;
+  }
+</style>
 <script>
   $(document).ready(function(){
     $('#usersTable').DataTable({
