--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -61,6 +61,11 @@
           </table>
         </div><!-- /.box-body -->
       </div><!-- /.box -->
+      <style type= "text/css">
+        th, td {
+          text-align: center;
+        }
+      </style>
       <script type="text/javascript">
         $(document).ready(function(){
           $('#articlesListe').DataTable({
