--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -43,6 +43,11 @@
           </table>
         </div><!-- /.box-body -->
       </div><!-- /.box -->
+      <style type= "text/css">
+        th, td {
+          text-align: center;
+        }
+      </style>
       <script type="text/javascript">
         $(document).ready(function(){
           $('#categoriesListe').DataTable({
