--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -57,6 +57,11 @@
     </div>
   </div>
 </section>
+<style type= "text/css">
+  th, td {
+    text-align: center;
+  }
+</style>
 <script>
   $(document).ready(function(){
     $('#commentsTable').DataTable({
