--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -97,6 +97,11 @@
     </table>
   </div>
 </div>
+<style type= "text/css">
+  th, td {
+    text-align: center;
+  }
+</style>
 <script>
   $(document).ready(function(){
     $('#projectsTable').DataTable({
