--- a/app/views/admin/pages/documentation.html.erb
+++ b/app/views/admin/pages/documentation.html.erb
@@ -1,3 +1,3 @@
 <h2>Documentation</h2>
 
-<p>Lien pour se désinscrire de la Newsletter :  <strong>www.meusetech.com/unsuscribe</strong></p>
+<p>Lien pour se désinscrire de la Newsletter :  <strong>www.meusetech.com/se-desinscrire</strong></p>
