--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :script do %>
-  <%= javascript_include_tag 'categories', 'data-turbolinks-track' => true %>   
+  <%= javascript_include_tag 'categories', 'data-turbolinks-track' => true %>
 <% end %>
 
 
@@ -8,11 +8,15 @@
     <%= form_for :category, url: admin_category_path(@category), method:'put' do |f| %>
       <div class="form-group">
         <%= label_tag 'name', "Nom de la catégorie" %>
-        <%= f.text_field :name, class: "form-control" %>
+        <%= f.text_field :name %>
       </div>
       <div class="form-group">
         <%= label_tag 'icon', "Icon" %>
-        <%= f.file_field :icon %>
+        <%= f.file_field :icon, :required => true %>
+      </div>
+      <div class="form-group">
+        <%= label_tag 'image', "Image" %>
+        <%= f.file_field :image, :required => true %>
       </div>
       <div class="form-group">
         <%= label_tag 'color', "Couleur de la catégorie" %>
@@ -32,4 +36,3 @@
     </div>
   </div>
 </div>
-
