--- a/app/views/surveys/stats.html.erb
+++ b/app/views/surveys/stats.html.erb
@@ -60,6 +60,14 @@ meta title: "Meusetech - Statistiques de #{@survey.title}",
               <% end %>
             </div>
           </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <p>
+                Obtenir les résultats de l'enquête en pdf : <a href="<%= @survey.pdf_file %>" class="btn btn-info fa fa-file-pdf-o"> Télécharger </a>
+              </p>
+            </div>
+          </div>
+          </div>
         </div>
       </div>
     </div>
