Insert maquette - home+partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   <%= render "partials/frontend/menu" %>
   <%= render "partials/alert" %>
   <%= yield %>
+  <%= render "partials/frontend/footer" %>
+
 
 </body>
 </html>
