--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -1,4 +1,51 @@
-<nav>
+<nav class="navbar navbar-default navbar-fixed-top">
+      <nav id="navSocial" role="navigation">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <div id="socialLink" class="col-xs-2">
+                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              </div>
+              <div id="userBar" class="col-xs-10">
+                <a href="#"><i class="fa fa-user" aria-hidden="true"></i> S'enregistrer</a>
+                <a href="#"><i class="fa fa-home" aria-hidden="true"></i> Adresse</a>
+                <a href="#"><i class="fa fa-mobile" aria-hidden="true"></i> Notifications</a>
+                <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Espace perso</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <nav id="menu" role="navigation" >
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#TopMenu" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+              </div>
+              <div class="collapse navbar-collapse" id="TopMenu">
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#">Accueil</a></li>
+                  <li><a href="#">Articles</a></li>
+                  <li><a href="#">Projets</a></li>
+                  <li><a href="#">Sondages</a></li>
+                  <li><a href="#">Pourquoi ce site ?</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </nav>
+
+
+  <!--<nav>
   <ul style="margin: 0;top: 58.5%;bottom: 0;left: 0;width: 8%;padding: 0;list-style: none;position: absolute;z-index: 1000;">
     <li style="height: 15%;width: 100%;margin-bottom:6.25%;"><%= link_to "<span style='display:none'>Projets</span>".html_safe, projects_path, {style:"height: 100%;width: 100%;display: block;"} %></li>
     <li style="height: 11.5%;width: 100%;margin-bottom:3%;"><%= link_to "<span style='display:none'>Articles</span>".html_safe, articles_path, {style:"height: 100%;width: 100%;display: block;"} %></li>
@@ -135,3 +182,4 @@
     </div>
   </div>
 </nav>
+-->
