--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "admin/template/AdminLTE";
-@import "admin/template/skins/_all-skins";
+@import "front/vars";
+@import "front/menu";
+@import "front/footer";
