--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,8 @@
+@import "libs/bs/variables";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "libs/bs/grid";
+
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "front/vars";
