--- a/app/assets/stylesheets/libs/_grid.scss
+++ b/app/assets/stylesheets/libs/_grid.scss
@@ -1,7 +1,7 @@
-@import "variables";
+@import "bs/variables";
 
-@import "mixins/grid";
-@import "mixins/grid-framework";
+@import "bs/mixins/grid";
+@import "bs/mixins/grid-framework";
 //
 // Grid system
 // --------------------------------------------------
