--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Meusetech</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', data: { turbolinks: 'true' }  %>
+  <%= javascript_include_tag 'application', data: { turbolinks: 'true' }  %>
   <%= csrf_meta_tags %>
 </head>
 <body>
